updated main content

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                   </div>
                </div>
             </div>
-            <!-- end header inner -->
-            <!-- end header -->
+         <!-- end header inner -->
+      <!-- end header -->
             <section class="slider_section">
                <div id="myCarousel" class="carousel slide banner_main" data-ride="carousel">
                   <ol class="carousel-indicators">
@@ -177,7 +177,7 @@ setelah pergantian hari dengan Komisi Referral Terbesar.
          </div>
       </div>
       <!-- end abouts -->
-      <!-- Features -->
+      <!-- Card Games -->
       <div id="cardgames" class="Features">
          <div class="container">
             <div class="row d_flex">
@@ -233,8 +233,8 @@ setelah pergantian hari dengan Komisi Referral Terbesar.
          </div>
       </div>
  
-      <!-- end Features -->
-      <!-- We are -->
+      <!-- end Card Games -->
+      <!-- Ding Dong -->
       <div id="dingdong" class="Our">
          <div class="container">
             <div class="row">
@@ -292,9 +292,9 @@ setelah pergantian hari dengan Komisi Referral Terbesar.
             </div>
          </div>
       </div>
-      <!-- end We are -->
+      <!-- end Ding Dong -->
 
-      <!-- contact -->
+      <!-- Register -->
       <div id="register" class="contact">
          <div class="container-fluid">
             <div class="row">
@@ -338,8 +338,7 @@ setelah pergantian hari dengan Komisi Referral Terbesar.
          </div>
       </div>
  
-      <!-- end contact -->
-      <!-- end clients -->
+      <!-- end Register -->
       
       <!--  footer -->
       <footer>
